Created company.html file and changed index.html

--- a/index.html
+++ b/index.html
@@ -1,2 +1,60 @@
 <html>
 </html>
+<html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html><html>
+</html>
